<resources>
    <string name="app_name">CBCMS</string>
    <string name="Default_Language">English</string>
    <string name="Default_Accuracy">HIGH</string>
    <string name="Locale_preference">Pref_Language</string>
    <string name="Accuracy_preference">Pref_Accuracy</string>
    <string name="complaint">Complaint</string>
    <string name="Location_Fix">Got Location</string>
    <string name="Location_Msg">Fix with the location?</string>
    <string name="country_prompt">Choose a country</string>
    <string name="state_prompt">Choose a state</string>
    <string name="district_prompt">Choose a district</string>
    <string name="Complaint">Complaint</string>
    <string name="Auto">Auto</string>
    <string name="action_settings">Settings</string>
    <string name="action_policy">Policy</string>
    <string name="action_exit">Exit</string>
    <string name="State">State</string>
    <string name="District">District</string>
    <string name="Violation">Violation</string>
    <string name="Address">Address</string>
    <string name="Add_Photo">Add photos</string>
    <string name="Submit">Submit</string>
    <string name="Photo">Add Photos</string>
    <string name="Patient">Please be patient</string>
    <string name="Location">Location</string>
    <string name="Camera_request">Please provide CAMERA and storage access to take pictures</string>
    <string name="Invalid_data">Location and Address not valid</string>
    <string name="Memory_full_Photo">No memory to add a photo</string>
    <string name="Accuracy">Accuracy</string>
    <string name="Accuracy_description">Define how accurate the location should be</string>
    <string name="Photos_delete">Delete Photos?</string>
    <string name="Photos_delete_failed">Failed to delete the photos!!!</string>
    <string name="Photos_delete_success">Photos deleted successfully</string>
    <string name="Email_success">Email sent successfully!!!</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="Reset">Reset</string>
    <string name="Loc_not_received">Location not yet found</string>

    <string name="title_activity_complaint">Complaint</string>
    <string name="Construction_Fencing">Construction/Fencing </string>
    <string name="FlatteningofSandDunes">Flattening of Sand Dunes </string>
    <string name="Dischargeofeffluents_waste_constructiondebris">Discharge of effluents/waste/construction debris</string>
    _
    <string name="ConstructionofRoad">Construction of Road</string>
    <string name="Reclamationofwaterbodies">Reclamation of waterbodies</string>


    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="Auto_Locate">Auto Location</string>
    <string name="Lang_change">Change Language</string>
    <string name="Lang_change_description">Define your preferred language</string>

    <!-- Strings related to login -->
    <string name="title_activity_maps">Map</string>
    <string name="coast_based_complaint_management_system">Coast Based Complaint Management System</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->


    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>



</resources>
